--- a/arch/arm64/configs/b1c1_defconfig
+++ b/arch/arm64/configs/b1c1_defconfig
@@ -692,3 +692,4 @@ CONFIG_DEFAULT_WESTWOOD=y
 CONFIG_DEFAULT_TCP_CONG="westwood"
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
+CONFIG_IOSCHED_MAPLE=y
