--- a/arch/arm64/configs/b1c1_defconfig
+++ b/arch/arm64/configs/b1c1_defconfig
@@ -671,6 +671,7 @@ CONFIG_QCACLD_WLAN_LFR2=y
 # CONFIG_GOLDFISH is not set
 # CONFIG_CHROME_PLATFORMS is not set
 CONFIG_LOCALVERSION="-unicornblood-bluecross-p"
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
